# CourseWork

./: CMakeLists.txt  Dockerfile  README.md  install.sh  uninstall.sh
src/: AuthDialog.cpp  AuthDialog.h  Database.cpp  Database.h  MainWindow.cpp  MainWindow.h  RegisterDialog.cpp  RegisterDialog.h  ThreatForm.cpp  ThreatForm.h  User.h  main.cpp
